[gd_scene load_steps=18 format=2]

[ext_resource path="res://samus/Samus.gd" type="Script" id=1]
[ext_resource path="res://samus/Physics2D.gd" type="Script" id=2]
[ext_resource path="res://samus/states/motion/on-ground/idle.gd" type="Script" id=3]
[ext_resource path="res://samus/assets/Samus_IdleLeft-strip3.png" type="Texture" id=4]
[ext_resource path="res://samus/assets/Samus_IdleRight-strip3t.png" type="Texture" id=5]
[ext_resource path="res://samus/states/motion/on-ground/front-turn.gd" type="Script" id=6]
[ext_resource path="res://samus/assets/Samus_FrontTurn-strip2.png" type="Texture" id=7]
[ext_resource path="res://samus/states/motion/on-ground/move.gd" type="Script" id=8]
[ext_resource path="res://samus/assets/Samus_MoveLeft-strip10.png" type="Texture" id=9]
[ext_resource path="res://samus/assets/Samus_MoveRight-strip10.png" type="Texture" id=10]
[ext_resource path="res://samus/StateVisualizer.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "FrontTurn"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("States/FrontTurn/FrontTurn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("States/Idle/IdleLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("States/Idle/IdleRight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("States/Move/MoveLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveRight"
length = 0.72
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("States/Move/MoveRight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="CapsuleShape2D" id=6]
height = 16.0

[node name="Samus" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FrontTurn = SubResource( 1 )
anims/IdleLeft = SubResource( 2 )
anims/IdleRight = SubResource( 3 )
anims/MoveLeft = SubResource( 4 )
anims/MoveRight = SubResource( 5 )

[node name="Physics2D" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[node name="States" type="Node2D" parent="."]
position = Vector2( 3, 0 )

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 3 )

[node name="IdleLeft" type="Sprite" parent="States/Idle"]
texture = ExtResource( 4 )
hframes = 3
frame = 1

[node name="IdleRight" type="Sprite" parent="States/Idle"]
visible = false
position = Vector2( -6, 0 )
texture = ExtResource( 5 )
hframes = 3

[node name="FrontTurn" type="Node2D" parent="States"]
script = ExtResource( 6 )

[node name="FrontTurn" type="Sprite" parent="States/FrontTurn"]
visible = false
position = Vector2( -3, 0 )
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="Move" type="Node2D" parent="States"]
script = ExtResource( 8 )

[node name="MoveLeft" type="Sprite" parent="States/Move"]
visible = false
position = Vector2( -4, 0 )
texture = ExtResource( 9 )
hframes = 10
frame = 2

[node name="MoveRight" type="Sprite" parent="States/Move"]
visible = false
position = Vector2( -5, 1 )
texture = ExtResource( 10 )
hframes = 10
frame = 4

[node name="StateVisualizer" type="Label" parent="."]
margin_left = -19.0
margin_top = -32.0
margin_right = 21.0
margin_bottom = -18.0
text = "States"
script = ExtResource( 11 )

[node name="WIP" type="Node2D" parent="."]

